config/base/deployment.yaml
apiVersion: apps/v1/beta2
kind: Deployment
metadata:
  labels:
    app: person-service
  name: person-service
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  selector:
    matchLabels:
      deployment: person-service
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        deployment: person-service
    spec:
      containers:
        - image: quay.io/nam_nt/person-service:latest
          imagePullPolicy: IfNotPresent
          name: person-service
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: 
            limits:
              cpu: 500m
              memory: 256Mi
            requests:
              cpu: 5m
              memory: 128Mi          
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
