config/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: person-service
  name: person-service
spec:
  ports:
  - name: 8083-tcp
    port: 8083
    protocol: TCP
    targetPort: 8083
  selector:
    deployment: person-service
  sessionAffinity: None
  type: ClusterIP
