config/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: person-service
  name: person-service
spec:
  port:
    targetPort: 8083-tcp
  to:
    kind: Service
    name: devperson-service
    weight: 100
  wildcardPolicy: None
